Identação do código

--- a/basic.html
+++ b/basic.html
@@ -10,27 +10,31 @@
     <h1>HTML - Resumo</h1>
 
     <h2>Headers </h2>
-    <p> Indicam a ordem de importância de títulos e subtitulos dentro da página</p>
+        <p> Indicam a ordem de importância de títulos e subtitulos dentro da página</p>
 
     <h2>Listas</h2>
-    <p>Para começar, você pode criar listas não-ordenadas:</p>
+        <p>Para começar, você pode criar listas não-ordenadas:</p>
 
-    <ul>
-        <li> Primeiro insira a tag "ul", indicando que a lista não é ordenada;</li>
-        <li> Em seguida, crie a tag "li" para indicar cada elemento da lista;</li>
-        <li> Pronto! Você criou uma lista desordenada.</li>
-    </ul>
+        <ul>
+            <li> Primeiro insira a tag "ul", indicando que a lista não é ordenada;</li>
+            <li> Em seguida, crie a tag "li" para indicar cada elemento da lista;</li>
+            <li> Pronto! Você criou uma lista desordenada.</li>
+        </ul>
 
-    <p>Já as listas ordenadas são feitas da seguinte forma:</p>
+        <p>Já as listas ordenadas são feitas da seguinte forma:</p>
 
-    <ol>
-        <li>Insira a tag "ol", que significa <em>ordened list</em>;</li>
-        <li>Crie tags "li" para indicar cada elemento da lista;</li>
-        <li>E voila, você criou uma lista ordenada!;</li>
-    </ol>
+        <ol>
+            <li>Insira a tag "ol", que significa <em>ordened list</em>;</li>
+            <li>Crie tags "li" para indicar cada elemento da lista;</li>
+            <li>E voila, você criou uma lista ordenada!;</li>
+        </ol>
 
-    <p> <strong><em>Importante: </em></</strong> Apesar de parecidas para nós humanos, 
-    as listas ordenadas e desordenadas são completamente distintas para o navegador.</p>
+        <p> <em><strong>Importante:</strong> Apesar de parecidas para nós humanos, 
+        as listas ordenadas e desordenadas são completamente distintas para o navegador. </em></p>
+
+    <h2>
+        <p></p>
+    </h2>
 
 </body>
 </html>
