Adicionado o trecho sobre elementos inline

--- a/basic.html
+++ b/basic.html
@@ -32,8 +32,8 @@
         <p> <em><strong>Importante:</strong> Apesar de parecidas para nós humanos, 
         as listas ordenadas e desordenadas são completamente distintas para o navegador. </em></p>
 
-    <h2>
-        <p></p>
+    <h2> Elementos inline </h2>    
+        <p>Chamamos de elementos inline, às tags que atuam dentro de um parágrafo, como <strong>"strong"</strong> e <em>"em"</em>.</p>
     </h2>
 
 </body>
