Adicionadas listas explicativas e entidades html

--- a/basic.html
+++ b/basic.html
@@ -16,18 +16,31 @@
         <p>Para começar, você pode criar listas não-ordenadas:</p>
 
         <ul>
-            <li> Primeiro insira a tag "ul", indicando que a lista não é ordenada;</li>
-            <li> Em seguida, crie a tag "li" para indicar cada elemento da lista;</li>
+            <li> Primeiro insira a tag &lt;ul&gt;, indicando que a lista não é ordenada;</li>
+            <li> Em seguida, crie a tag &lt;li&gt; para indicar cada elemento da lista;</li>
             <li> Pronto! Você criou uma lista desordenada.</li>
         </ul>
 
         <p>Já as listas ordenadas são feitas da seguinte forma:</p>
 
         <ol>
-            <li>Insira a tag "ol", que significa <em>ordened list</em>;</li>
-            <li>Crie tags "li" para indicar cada elemento da lista;</li>
+            <li>Insira a tag &lt;ol&gt;, que significa <em>ordened list</em>;</li>
+            <li>Crie tags &lt;li&gt; para indicar cada elemento da lista;</li>
             <li>E voila, você criou uma lista ordenada!;</li>
         </ol>
+
+        <p>Não menos importantes, as listas explicativas podem ser criadas dessa forma: </p>
+
+        <dl>
+            <dt>Adicione a tag &lt;dl&gt;. </dt>
+            <dd>Para criar a lista de definições;</dd>
+
+            <dt>Dentro da tag &lt;dl&gt; adicione &lt;dt&gt;</dt>
+            <dd>Para inserir a palavra que precede a explicação;</dd>
+
+            <dt>Por fim, adicione &lt;dd&gt;</dt>
+            <dd>Para adicionar a explicação.</dd>
+        </dl>
 
         <p> <em><strong>Importante:</strong> Apesar de parecidas para nós humanos, 
         as listas ordenadas e desordenadas são completamente distintas para o navegador. </em></p>
