Adicionado imagens e links

--- a/basic.html
+++ b/basic.html
@@ -45,9 +45,23 @@
         <p> <em><strong>Importante:</strong> Apesar de parecidas para nós humanos, 
         as listas ordenadas e desordenadas são completamente distintas para o navegador. </em></p>
 
+    <h2>Imagens</h2>
+            <p> Para adicionar imagens ao html devemos utilizar a tag &lt;img&gt; da seguinte forma: </p>
+            <code> &lt;img src="img/imagem.png" alt="descrição da imagem"&gt;</code>
+            <p>E o resultado sera o seguinte: </p>
+            <img src = "img/solzin.png" alt = "Uma foto do sol"/>
+
+            <p>Também podemos formatar as imagens que aparecem no html através das tags width e height, sabendo disso, vamos fazer a foto do sol ficar menor com largura de 75 pixels
+                e altura de 75 px:</p>
+
+            <img src="img/solzin.png" alt = "Uma foto do sol formatada" width="75" height="75"/>
+
     <h2> Elementos inline </h2>    
         <p>Chamamos de elementos inline, às tags que atuam dentro de um parágrafo, como <strong>"strong"</strong> e <em>"em"</em>.</p>
-    </h2>
 
-</body>
-</html>
+        <p>Outro elemento inline muito importante é a tag &lt;a&gt; que indica links quando sucedida por "href = "..."". Por exemplo, caso queiramos adicionar um link para a página do google
+           , devemos escrever:</p>
+
+        <code>&lt;a href = "http://google.com"&gt;www.google.com&lt;/a&gt;</code>
+
+        <p>E o resultado será: <a href = "http://www.google.com" target="_blank" rel = "noreferrer noopener">www.google.com</a>.</p>
